--- a/package.json
+++ b/package.json
@@ -50,18 +50,22 @@
     },
     "scripts": {
         "watch": "run-p gulp:watch cljs:watch",
-        "electron-watch": "run-p gulp:watch cljs:electron-watch webpack",
-        "app-watch": "run-p gulp:watch cljs:app-watch webpack",
+        "electron-watch": "run-p gulp:watch cljs:electron-watch webpack --config-name app",
+        "app-watch": "run-p gulp:watch cljs:app-watch webpack-app-watch",
+        "mobile-watch": "run-p gulp:mobile-watch cljs:mobile-watch webpack-mobile-watch",
         "dev": "run-p gulp:watch gulp:mobile-watch cljs:dev-watch webpack",
-        "release": "run-s gulp:build cljs:release webpack-build",
-        "release-app": "run-s gulp:build cljs:release-app webpack-build",
-        "release-mobile": "run-s gulp:buildMobile cljs:release-mobile webpack-build",
-        "dev-release-app": "run-s gulp:build cljs:dev-release-app webpack-build",
+        "release": "run-s gulp:build cljs:release webpack-app-build",
+        "release-app": "run-s gulp:build cljs:release-app webpack-app-build",
+        "release-mobile": "run-s gulp:buildMobile cljs:release-mobile webpack-mobile-build",
+        "dev-release-app": "run-s gulp:build cljs:dev-release-app webpack-app-build",
         "dev-electron-app": "gulp electron",
-        "release-electron": "run-s gulp:build && gulp electronMaker webpack-build",
+        "release-electron": "run-s gulp:build && gulp electronMaker webpack-app-build",
         "debug-electron": "cd static/ && yarn electron:debug",
         "webpack": "webpack --watch",
-        "webpack-build": "npx webpack build",
+        "webpack-app-watch": "npx webpack --watch --config-name app",
+        "webpack-mobile-watch": "npx webpack --watch --config-name mobile",
+        "webpack-app-build": "npx webpack build --config-name app",
+        "webpack-mobile-build": "npx webpack build --config-name mobile",
         "sync-android-release": "yarn clean && yarn release-mobile && rm -rf ./static/mobile/**/*.map && npx cap sync android",
         "sync-ios-release": "yarn clean && yarn release-mobile && rm -rf ./static/mobile/**/*.map && npx cap sync ios",
         "clean": "gulp clean",
