fix: yarn watch

--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
         "webpack-cli": "^6.0.1"
     },
     "scripts": {
-        "watch": "run-p gulp:watch cljs:watch",
-        "electron-watch": "run-p gulp:watch cljs:electron-watch webpack --config-name app",
+        "watch": "run-p gulp:watch cljs:watch webpack-app-watch",
+        "electron-watch": "run-p gulp:watch cljs:electron-watch webpack-app-watch",
         "app-watch": "run-p gulp:watch cljs:app-watch webpack-app-watch",
         "mobile-watch": "run-p gulp:mobile-watch cljs:mobile-watch webpack-mobile-watch",
         "dev": "run-p gulp:watch gulp:mobile-watch cljs:dev-watch webpack",
