chore: remove ionic ui

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "watch:ui:examples": "parcel serve ./examples/index.html",
     "build:ui:only": "parcel build --target ui",
-    "build:ionic:only": "parcel build --target ionic",
     "build:silkhq:only": "parcel build --target silkhq",
-    "build:ui": "rm -rf .parcel-cache && yarn build:ui:only && yarn build:ionic:only && yarn build:silkhq:only",
+    "build:ui": "rm -rf .parcel-cache && yarn build:ui:only && yarn build:silkhq:only",
     "watch:storybook": "storybook dev -p 6006",
     "postinstall": "yarn build:ui"
   },
@@ -34,7 +33,6 @@
     "@radix-ui/react-toggle": "^1.1.6",
     "@radix-ui/react-toggle-group": "^1.1.7",
     "@radix-ui/react-tooltip": "^1.2.4",
-    "@ionic/react": "8.5.7",
     "@silk-hq/components": "^0.9.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.0.0",
@@ -96,14 +94,6 @@
     "main": false,
     "ui": {
       "source": "src/ui.ts",
-      "outputFormat": "global",
-      "includeNodeModules": {
-        "react": false,
-        "react-dom": false
-      }
-    },
-    "ionic": {
-      "source": "src/ionic.ts",
       "outputFormat": "global",
       "includeNodeModules": {
         "react": false,
