chore: remove branch limit

--- a/.github/workflows/build-desktop-release.yml
+++ b/.github/workflows/build-desktop-release.yml
@@ -55,11 +55,11 @@ jobs:
   compile-cljs:
     runs-on: ubuntu-22.04
     steps:
-      - name: Check build options
-        if: ${{ github.event_name == 'workflow_dispatch' && (github.event.inputs.build-target == 'nightly' || github.event.inputs.build-target == 'beta') && github.event.inputs.git-ref != 'master' }}
-        run: |
-          echo "::error title=CheckFail::Nightly and Beta Release MUST be built from master"
-          exit 1
+      # - name: Check build options
+      #   if: ${{ github.event_name == 'workflow_dispatch' && (github.event.inputs.build-target == 'nightly' || github.event.inputs.build-target == 'beta') && github.event.inputs.git-ref != 'master' }}
+      #   run: |
+      #     echo "::error title=CheckFail::Nightly and Beta Release MUST be built from master"
+      #     exit 1
 
       - name: Check out Git repository
         uses: actions/checkout@v3
