--- a/deps/cli/package.json
+++ b/deps/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@logseq/cli",
-  "version": "0.1.0-alpha.1",
+  "version": "0.1.0",
   "description": "Logseq CLI",
   "bin": {
     "logseq": "cli.mjs"
