enhance(mobile): add record audio lib

--- a/package.json
+++ b/package.json
@@ -123,8 +123,6 @@
         "@capacitor/share": "7.0.1",
         "@capacitor/splash-screen": "7.0.1",
         "@capacitor/status-bar": "7.0.1",
-        "@capawesome/capacitor-background-task": "7.0.1",
-        "@capgo/capacitor-navigation-bar": "7.1.2",
         "@dnd-kit/core": "^6.0.8",
         "@dnd-kit/sortable": "^7.0.2",
         "@emoji-mart/data": "^1.1.2",
@@ -194,7 +192,8 @@
         "threads": "1.6.5",
         "url": "^0.11.0",
         "util": "^0.12.5",
-        "yargs-parser": "20.2.4"
+        "yargs-parser": "20.2.4",
+        "wavesurfer.js": "7.10.1"
     },
     "resolutions": {
         "pixi-graph-fork/@pixi/app": "6.2.0",
