fix: webpack release using production mode to reduce bundle size

--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
         "electron-watch": "run-p gulp:watch cljs:electron-watch webpack-app-watch",
         "app-watch": "run-p gulp:watch cljs:app-watch webpack-app-watch",
         "mobile-watch": "run-p gulp:mobile-watch cljs:mobile-watch webpack-mobile-watch",
-        "dev": "run-p gulp:watch gulp:mobile-watch cljs:dev-watch webpack",
+        "dev": "run-p gulp:watch gulp:mobile-watch cljs:dev-watch webpack-watch",
         "release": "run-s gulp:build cljs:release webpack-app-build",
         "release-app": "run-s gulp:build cljs:release-app webpack-app-build",
         "release-mobile": "run-s gulp:buildMobile cljs:release-mobile webpack-mobile-build",
@@ -62,11 +62,11 @@
         "dev-electron-app": "gulp electron",
         "release-electron": "run-s gulp:build && yarn webpack-app-build && gulp electronMaker",
         "debug-electron": "cd static/ && yarn electron:debug",
-        "webpack": "webpack --watch",
+        "webpack-watch": "webpack --watch",
         "webpack-app-watch": "npx webpack --watch --config-name app",
         "webpack-mobile-watch": "npx webpack --watch --config-name mobile",
-        "webpack-app-build": "npx webpack build --config-name app",
-        "webpack-mobile-build": "npx webpack build --config-name mobile",
+        "webpack-app-build": "npx webpack build --mode production --config-name app",
+        "webpack-mobile-build": "npx webpack build --mode production --config-name mobile",
         "sync-android-release": "yarn clean && yarn release-mobile && rm -rf ./static/mobile/**/*.map && npx cap sync android",
         "sync-ios-release": "yarn clean && yarn release-mobile && rm -rf ./static/mobile/**/*.map && npx cap sync ios",
         "clean": "gulp clean",
