--- a/.github/workflows/build-ios-release.yml
+++ b/.github/workflows/build-ios-release.yml
@@ -25,7 +25,7 @@ jobs:
           ref: ${{ github.event.inputs.git-ref }}
       - uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '26.0-beta'
+          xcode-version: '26.0.0'
       - name: Install iOS
         run: xcodebuild -downloadPlatform iOS
       - name: Install Node.js, NPM and Yarn
