--- a/.github/workflows/build-ios-release.yml
+++ b/.github/workflows/build-ios-release.yml
@@ -25,7 +25,13 @@ jobs:
           ref: ${{ github.event.inputs.git-ref }}
       - uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '26.0.0'
+          xcode-version: 16.4
+      - name: Show runtimes
+        run: |
+          xcrun simctl list > /dev/null
+      - name: Install iOS platform
+        run: |
+          xcodebuild -downloadPlatform iOS -buildVersion 18.6
       - name: Install Node.js, NPM and Yarn
         uses: actions/setup-node@v4
         with:
@@ -83,3 +89,4 @@ jobs:
         with:
           name: static
           path: static
+          retention-days: 3
