feat(mobile): audio record && transcribe (#12105)
* feat: audio transcribe

* enhance(mobile): auto start recording on initialization

* fix(mobile): can't delete journal from selection bar

* fix: duplicated audio record buttons in quick add

* fix(mobile): inactive bottom tab color

* enhance(mobile): display no results when there's no matched items

* enhance(mobile): add audio transcription feature and enhance audio component

* fix: store assets directly instead in today page instead of node ref

* save transcribed text to audio's child block

* enhance: transcribe supports punctuations and being offline only

* fix(mobile): save assets to current editing page

---------

Co-authored-by: Tienson Qin <tiensonqin@gmail.com>

--- a/package.json
+++ b/package.json
@@ -145,7 +145,6 @@
         "@tabler/icons-webfont": "^2.47.0",
         "@tippyjs/react": "4.2.5",
         "bignumber.js": "^9.0.2",
-        "capacitor-voice-recorder": "^5.0.0",
         "check-password-strength": "2.0.7",
         "chokidar": "3.5.1",
         "chrono-node": "2.2.4",
@@ -192,6 +191,7 @@
         "threads": "1.6.5",
         "url": "^0.11.0",
         "util": "^0.12.5",
+        "wavesurfer.js": "7.10.1",
         "yargs-parser": "20.2.4"
     },
     "resolutions": {
