--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
         "@capacitor/camera": "7.0.1",
         "@capacitor/clipboard": "7.0.1",
         "@capacitor/core": "7.2.0",
+        "@capacitor/device": "^7.0.2",
         "@capacitor/filesystem": "7.0.1",
         "@capacitor/haptics": "7.0.1",
         "@capacitor/ios": "7.2.0",
