--- a/deps/cli/package.json
+++ b/deps/cli/package.json
@@ -13,6 +13,7 @@
     "@logseq/nbb-logseq": "github:logseq/nbb-logseq#feat-db-v28",
     "@modelcontextprotocol/sdk": "^1.17.5",
     "better-sqlite3": "~11.10.0",
+    "fastify": "5.3.2",
     "fs-extra": "^11.3.0",
     "jszip": "3.8.0",
     "mldoc": "^1.5.9",
