--- a/resources/package.json
+++ b/resources/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@fastify/cors": "11.0.1",
     "@logseq/rsapi": "0.0.92",
+    "@modelcontextprotocol/sdk": "^1.17.5",
     "@sentry/electron": "2.5.1",
     "abort-controller": "3.0.0",
     "chokidar": "^3.5.1",
@@ -44,20 +45,21 @@
     "posthog-js": "1.10.2",
     "semver": "7.5.2",
     "socks-proxy-agent": "8.0.2",
-    "update-electron-app": "2.0.1"
+    "update-electron-app": "2.0.1",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.8.3",
     "@electron-forge/maker-deb": "^7.8.3",
     "@electron-forge/maker-dmg": "^7.8.3",
-    "@electron-forge/maker-wix": "^7.8.3",
     "@electron-forge/maker-rpm": "^7.8.3",
     "@electron-forge/maker-squirrel": "^7.8.3",
+    "@electron-forge/maker-wix": "^7.8.3",
     "@electron-forge/maker-zip": "^7.8.3",
     "@electron/rebuild": "4.0.1",
     "electron": "37.2.6",
     "electron-builder": "26.0.12",
-    "electron-forge-maker-appimage": "https://github.com/logseq/electron-forge-maker-appimage.git",
-    "electron-devtools-installer": "4.0.0"
+    "electron-devtools-installer": "4.0.0",
+    "electron-forge-maker-appimage": "https://github.com/logseq/electron-forge-maker-appimage.git"
   }
 }
