--- a/ios/App/shortcutsExtension.entitlements
+++ b/ios/App/shortcutsExtension.entitlements
@@ -3,6 +3,8 @@
 <plist version="1.0">
 <dict>
 	<key>com.apple.security.application-groups</key>
-	<array/>
+	<array>
+		<string>group.com.logseq.logseq</string>
+	</array>
 </dict>
 </plist>
