fix: re-enable repeatable install now that it's fixed on master

--- a/.github/workflows/deploy-db-test-pages.yml
+++ b/.github/workflows/deploy-db-test-pages.yml
@@ -47,8 +47,7 @@ jobs:
           cli: ${{ env.CLOJURE_VERSION }}
 
       - name: Fetch yarn deps
-        # run: yarn install --frozen-lockfile
-        run: yarn install
+        run: yarn install --frozen-lockfile
 
       - name: Set Build Environment Variables
         run: |
