--- a/resources/package.json
+++ b/resources/package.json
@@ -60,11 +60,11 @@
     "electron-forge-maker-appimage": "https://github.com/logseq/electron-forge-maker-appimage.git"
   },
   "resolutions": {
-    "**/electron": "34.5.6",
-    "**/node-abi": "3.75.0",
-    "**/node-gyp": "11.1.0",
-    "string-width": "4.2.0",
-    "wrap-ansi": "^7.0.0",
-    "strip-ansi": "^6.0.1"
+    "**/electron": "38.4.0",
+    "**/node-abi": "4.14.0",
+    "**/node-gyp": "12.0.0",
+    "string-width": "8.1.0",
+    "wrap-ansi": "9.0.2",
+    "strip-ansi": "7.1.2"
   }
 }
